# car-ai

./: .gitignore  README.md
apps/backend/: .env.example  package-lock.json  package.json  tsconfig.json
apps/backend/data/: voice_intents.jsonl
apps/backend/src/: app.ts  server.ts
apps/backend/src/config/: env.ts  thirdParty.ts
apps/backend/src/controllers/: simulationController.ts  voiceController.ts
apps/backend/src/models/: simulation.ts  voice.ts
apps/backend/src/rl/: drivingEnv.ts  episodeGenerator.ts  episodeTypes.ts  index.ts
apps/backend/src/routes/: index.ts  simulationRoutes.ts  voiceRoutes.ts
apps/backend/src/scripts/: generateEpisodes.ts
apps/backend/src/services/: elevenLabsService.ts  fireworksService.ts  simulationService.ts
apps/backend/src/utils/: intentLogger.ts  logger.ts  voiceCommandParser.ts
apps/frontend/: package-lock.json  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/components/: AutopilotController.tsx  CarPlayDisplay.tsx
apps/frontend/src/controllers/: simulationController.ts  useGamepadControls.ts
apps/training/: README.md  pyproject.toml
apps/training/fireworks/: rft-ppo.yaml
apps/training/scripts/: export_onnx.py  train_ppo.py
apps/training/src/car_ai_rl/: __init__.py  env.py
apps/training/src/car_ai_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: fireworks.md  integration-overview.md  rl-plan.md  rl-training.md  roadmap.md  traffic.md  voice-integration.md
evals/: highway_eval.yaml  highway_metrics.py
scripts/: generate_voice_intent_samples.sh
(+12 files in other folders)
