[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-ai-rl"
version = "0.1.0"
description = "RL training pipeline for the car-ai simulator"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "gymnasium==0.29.1",
  "numpy>=1.26",
  "torch>=2.3",
  "stable-baselines3==2.3.2",
  "onnx>=1.16",
  "onnxruntime>=1.19",
  "pydantic>=2.9",
  "requests>=2.32",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "ruff==0.6.8",
  "mypy==1.11.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]
